--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-hallo wereld
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Jade Yorks">
+    <meta name="viewport" content="width= device-width, initial-scale =1">
+    <link href="https://fonts.googleapis.com/css?family=Bitter|Bree+Serif|Crete+Round|Martel" rel="stylesheet">
+    <link rel="stylesheet" href="css/portfolio.css">
+
+    <title>Portfolio Jade Yorks</title>
+</head>
+
+<body>
+    <header class="header">
+
+        <nav>
+            <a href="">Home</a>
+            <a href="#about-section">Over mij</a>
+            <a href="#projecten">Projecten</a>
+        </nav>
+        <div class="header-textbox">
+
+            <h1>while(jade &amp;&amp; webdev) <span class="subkop">&#123;toffe webdingen;</span>plezier++;&#125;</h1>
+            <h3>Jade Yorks</h3>
+        </div>
+
+    </header>
+
+    <section id="about-section">
+        <nav>
+            <a href="">Home</a>
+            <a href="">Over mij</a>
+            <a href="">Projecten</a>
+        </nav>
+        <div class="about-textbox">
+            <h2>Ik ben Jade, <span class="subkop"> beginnend, gepassioneerd</span> <span class="subkop"> en uiterst plezante</span> <span class="subkop">front end developer </span>in ontwikkeling</h2>
+            <div class="about-tekstvlak">
+                <p>
+                    Vooral ervaring met de kunst van het geschreven woord, maar sinds enige tijd verslaafd, verliefd en stiekem een beetje geobsedeerd door het schrijven van code. Ik wilde een eigen blog, maar kon de perfecte WordPress template niet vinden. Dan maar zelf doen, dacht ik.</p>
+                <p>En zo leerde ik html en css kennen via codecademy. Daarna volgde freecodecamp, meerdere cursussen op Udemy, het vak JavaScript cliëntside scripting aan Encora en het fantastische 10 daagde event Days of Code in Rotterdam. Het resultaat? Ik ondernam de eerste stapjes naar het maken van webapplicaties en heb sindsdien een niet te stillen honger naar meer.
+
+                </p>
+            </div>
+        </div>
+        <div class="social-mediabox">
+            <img src="img/004-instagram-logo.png" alt="">
+            <img src="img/003-github-logo.png" alt="">
+            <img src="img/005-twitter-logo-button.png" alt="">
+            <img src="img/006-facebook-logo-button.png" alt="">
+        </div>
+        <p id="email">jadeyorks@gmail.com</p>
+    </section>
+
+    <section id="projects-section">
+        <nav>
+            <a href="#about-section">Home</a>
+            <a href="#about">Over mij</a>
+            <a href="">Projecten</a>
+        </nav>
+        <div id="projects">
+            <div class="project" id="project-1">
+                <h3>The Feel Good Page</h3>
+            </div>
+            <div class="project" id="project-2">
+                <h3>Jouw Weerbericht</h3>
+            </div>
+            <div class="project" id="project-3">
+                <h3>Know it all</h3>
+            </div>
+
+        </div>
+    </section>
+</body>
+
+</html>
