css edit aboutsection

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <a href="">Over mij</a>
             <a href="">Projecten</a>
         </nav> -->
+        <div class="groen-vlak">
+            
+        </div>
         <div id="alle-tekst">
             <h2>Ik ben Jade, <span class="subkop"> een beginnend, gepassioneerd</span> <span class="subkop"> en uiterst plezante</span> <span class="subkop">front end developer </span>in ontwikkeling</h2>
             <div class="about-textbox">
