--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <img src="img/004-instagram-logo.png" alt="">
             </a>
     
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/jaduh" target="_blank">
                 <img src="img/003-github-logo.png" alt=""></a>
              <a href="https://twitter.com/coderdutchie" target="_blank">
                 <img src="img/005-twitter-logo-button.png" alt=""></a>
